@@ -1,6 +1,6 @@
-Date: 2026-01-07
+Date: 2026-01-08
 Package: CHNOSZ
-Version: 2.2.0-23
+Version: 2.2.0-24
 Title: Thermodynamic Calculations and Diagrams for Geochemistry
 Authors@R: c(
     person("Jeffrey", "Dick", , "j3ffdick@gmail.com", role = c("aut", "cre"),
